osd/ECBackend: new in-flight apply handling, separate apply acks

1- Get rid of the dual acks for apply and commit.  They are heavyweight
and inefficient and totally unnecessary for non-FileStore backends.
Make the current on_commit reply set both applied and commit = true.

2- To maintain protects for read-after-write before apply on FileStore,
add a simple wait mechanism for applied writes.  Make it a no-op for
backends that have synchronous apply.  This way we only incur overhead
for FileStore.

This fixes http://tracker.ceph.com/issues/22668 by prevening a sync
onreadable call from calling back into check_ops() and doing further
work; that kind of call chain is very fragile and leads to bugs like
22668.

Fixes: http://tracker.ceph.com/issues/22668
Signed-off-by: Sage Weil <sage@redhat.com>